kubernetes/manifests/mapache/foreman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foreman
  namespace: mapache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foreman
  template:
    metadata:
      labels:
        app: foreman
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: foreman
              topologyKey: kubernetes.io/hostname
      containers:
        - name: foreman
          image: ghcr.io/gaucho-racing/mapache/foreman:latest
          ports:
            - containerPort: 7011
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: foreman
  namespace: mapache
spec:
  selector:
    app: foreman
  ports:
    - port: 7011
      targetPort: 7011
