kubernetes/manifests/mapache/vehicle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle
  namespace: mapache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicle
  template:
    metadata:
      labels:
        app: vehicle
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: vehicle
              topologyKey: kubernetes.io/hostname
      containers:
        - name: vehicle
          image: ghcr.io/gaucho-racing/mapache/vehicle:latest
          ports:
            - containerPort: 7003
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle
  namespace: mapache
spec:
  selector:
    app: vehicle
  ports:
    - port: 7003
      targetPort: 7003
